--- a/app/assets/style/style.css
+++ b/app/assets/style/style.css
@@ -84,6 +84,8 @@ body{
 
 .todo-item a svg{
     pointer-events: none;
+    width: 25px;
+    height: 25px;
 }
 
 .completed-todos .todo-item{
@@ -94,4 +96,5 @@ body{
 .complete-title{
     font-size: 20px;
     margin-top: 30px;
+    margin-bottom: 10px;
 }
